feat: permissions and tests
